--- a/testES/docker/docker-compose.yml
+++ b/testES/docker/docker-compose.yml
@@ -1,4 +1,6 @@
 version: '3.5'
+volumes:
+  prometheus_data: {}
 services:
   es01:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.11.2
@@ -20,3 +22,19 @@ services:
     ports:
       - 9200:9200
       
+  prometheus:
+      image: prom/prometheus
+      container_name: prometheustest
+      volumes:
+        - ../prometheus/:/etc/prometheus/
+        - prometheus_data:/prometheus
+      command:
+        - '--config.file=/etc/prometheus/prometheus.yml'
+        - '--storage.tsdb.path=/prometheus'
+        - '--web.console.libraries=/usr/share/prometheus/console_libraries'
+        - '--web.console.templates=/usr/share/prometheus/consoles'
+        - '--web.enable-lifecycle'
+      ports:
+        - 9090:9090
+      network_mode: "host"
+      restart: always
